--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-make-it-all",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://na832938.github.io/team19-make-it-all-system",
+  "homepage": "https://nanda-kumudhan.github.io/team19-make-it-all-system",
   "type": "module",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
