--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react-make-it-all",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nanda-kumudhan.github.io/team19-make-it-all-system",
+  
   "type": "module",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
-    "@tailwindcss/vite": "^4.1.16",
     "chart.js": "^4.5.1",
+    "next": "^16.0.3",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -16,20 +16,14 @@
     "web-vitals": "^5.1.0"
   },
   "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
-    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
-    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
-    "vite": "^7.1.12"
+    "tailwindcss": "^4.1.16"
   }
 }
