--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "chart.js": "^4.5.1",
     "next": "^16.0.3",
     "prop-types": "^15.8.1",
